--- a/_includes/layout.liquid
+++ b/_includes/layout.liquid
@@ -15,6 +15,7 @@ title: 11ty Boilerplate
     <ul>
       <li><a href="/" title="Go home">Home</a></li>
       <li><a href="/about/" title="About the boilerplate">About</a></li>
+      <li><a href="/blogposts/" title="Blog posts">Blog</a></li>
     </ul>
   </nav>
     {{ content }}
