--- a/index.liquid
+++ b/index.liquid
@@ -3,5 +3,10 @@ layout: layout.liquid
 title: 11ty Boilerplate
 ---
 
-<h1>Yet Another 11ty <strong>Boilerplate</strong></h1>
-<img alt="pine" src="/images/pine.png" width="50" />
+<h1>Leo's <strong>Lunar</strong> Log</h1>
+
+<h2>Welcome to my Lunar Logs! I post about space travelling, check out my posts below!</h2>
+
+<a href="/blogposts/" title="bloglink"><h2>Link to Blog Hub</h2></a>
+
+<img class="logo" alt="logo" src="/images/Logo.png" width="100" />
