--- a/index.liquid
+++ b/index.liquid
@@ -5,8 +5,10 @@ title: 11ty Boilerplate
 
 <h1>Leo's <strong>Lunar</strong> Log</h1>
 
-<h2>Welcome to my Lunar Logs! I post about space travelling, check out my posts below!</h2>
+<h2>Welcome to my Lunar Logs! I post about space travelling, check them out below!</h2>
 
 <a href="/blogposts/" title="bloglink"><h2>Link to Blog Hub</h2></a>
 
 <img class="logo" alt="logo" src="/images/Logo.png" width="100" />
+
+{% twitter_user 'Leo' 'lunarleo' %}
