--- a/_includes/layout.liquid
+++ b/_includes/layout.liquid
@@ -14,7 +14,7 @@ title: 11ty Boilerplate
   <nav>
     <ul>
       <li><a href="/" title="Go home">Home</a></li>
-      <li><a href="/about/" title="About the boilerplate">About</a></li>
+      <li><a href="/about/" title="About Leo">About</a></li>
       <li><a href="/blogposts/" title="Blog posts">Blog</a></li>
     </ul>
   </nav>
